practice3/k8s/service-worker.yaml
apiVersion: v1
kind: Service
metadata:
  name: worker
  namespace: finances
  labels:
    app: worker
spec:
  type: ClusterIP
  selector:
    app: worker
  ports:
    - name: http
      port: 3001
      targetPort: 3001
